syntax = "proto3";
package invoice;

service Invoice {
  rpc Get(InvoiceId) returns (InvoiceInfo) {}
  rpc Create(InvoiceCreateParams) returns (InvoiceInfo) {}
  rpc Fund(InvoiceFundParams) returns (InvoiceInfo) {}
}

message InvoiceId {
  string guid = 1;
  string id = 2;
}

message InvoiceInfo {
  string id = 1;
  string provider_id = 2;
  string investor_id = 3;
  double amount = 4;
  string status = 5;
  string created_at = 6;
  string updated_at = 7;
}

message InvoiceCreateParams {
  string guid = 1;
  string provider_id = 2;
  double amount = 3;
}

message InvoiceFundParams {
  string guid = 1;
  string id = 2;
  string investor_id = 3;
}
